--- a/_quarto.yml
+++ b/_quarto.yml
@@ -59,5 +59,5 @@ format:
     link-external-icon: true
     link-external-newwindow: true
     link-external-filter: ^(?:http:|https:)\/\/fnaufel\.github\.io
-
-
+    resources:
+      - "site/index.html"
